--- a/src/components/home/index.css
+++ b/src/components/home/index.css
@@ -1,11 +1,3 @@
-main {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
-
 main .container {
   display: flex;
   flex-direction: column;
